--- a/wordpress/values.yaml
+++ b/wordpress/values.yaml
@@ -529,7 +529,8 @@ lifecycleHooks: {}
 service:
   ## @param service.type WordPress service type
   ##
-  type: LoadBalancer
+  ## default is "NodePort"
+  type: NodePort
   ## @param service.ports.http WordPress service HTTP port
   ## @param service.ports.https WordPress service HTTPS port
   ##
@@ -701,7 +702,8 @@ ingress:
 persistence:
   ## @param persistence.enabled Enable persistence using Persistent Volume Claims
   ##
-  enabled: true
+  ## default is "true"
+  enabled: false
   ## @param persistence.storageClass Persistent Volume storage class
   ## If defined, storageClassName: <storageClass>
   ## If set to "-", storageClassName: "", which disables dynamic provisioning
@@ -1114,7 +1116,8 @@ mariadb:
     ## @param mariadb.primary.persistence.size Persistent Volume size
     ##
     persistence:
-      enabled: true
+      ## enabled: true
+      enabled: false
       storageClass: ""
       accessModes:
         - ReadWriteOnce
