--- a/apache/values.yaml
+++ b/apache/values.yaml
@@ -129,7 +129,9 @@ affinity: {}
 ## @param nodeSelector Node labels for pod assignment
 ## ref: https://kubernetes.io/docs/user-guide/node-selection/
 ##
-nodeSelector: {}
+## for EKS Playground
+nodeSelector:
+  nodegroup: ng-play
 ## @param tolerations Tolerations for pod assignment
 ## ref: https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/
 ##
